Enabled scatter hash transaction for orderMake API
